
	* electric.el (electric-pair-post-self-insert-function): Let user
	turn it off buffer-locally (bug#9932).

	* progmodes/python.el (python-beginning-of-statement):
	Rewrite (bug#2703).

	* progmodes/compile.el: Better handle TABs (bug#9749).
	(compilation-internal-error-properties)
	(compilation-next-error-function): Obey the target buffer's
	compilation-error-screen-columns.

2011-11-09  Martin Rudalics  <rudalics@gmx.at>

	* window.el (window-size-fixed-p): Rewrite doc-string.
	(window-resizable-p): Rename to window--resizable-p.  Update callers.
	(window--resizable): New function.  Make all callers of
	window-resizable call window--resizable instead.
	(window-resizable): Rewrite in terms of window--resizable.

2011-11-08  Glenn Morris  <rgm@gnu.org>

	* progmodes/delphi.el (delphi-mode-syntax-table):
	Let define-derived-mode define a proper syntax table.  (Bug#9994)

2011-11-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* window.el: Stay away from defsubst.
	(window-list-no-nils): Remove.
	(window-state-get-1, window-state-get): Use backquote instead.

2011-11-08  thierry  <thierry.volpiatto@gmail.com>

	* emacs-lisp/find-func.el (find-function-read):
	Fix incorrect use of default argument in `completing-read'.

2011-11-08  Martin Rudalics  <rudalics@gmx.at>

	* window.el (display-buffer-function, special-display-function):
	Mention display-buffer-record-window but do not mention
	help-setup parameter in doc-strings.
	(window-min-delta): Fix doc-string typo.

2011-11-08  Chong Yidong  <cyd@gnu.org>

	* window.el (window-total-height, window-total-width): Doc fix.
	(window-body-size): Move from C.
	(window-body-height, window-body-width): Move to C.

2011-11-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* window.el: Make special-display like display-buffer-alist (bug#9532).
	(display-buffer--special-action): New function, morphed
	from display-buffer--special.
	(display-buffer): Use it to handle special-display-buffers at higher