@@ -1,7 +1,7 @@
 2011-11-09  Chong Yidong  <cyd@gnu.org>
 
 	* windows.texi (Window Sizes): Document window-pixel-edges,
-	window-inside-pixel-edges. window-absolute-pixel-edges, and
+	window-inside-pixel-edges, window-absolute-pixel-edges, and
 	window-inside-absolute-pixel-edges.
 	(Resizing Windows): shrink-window-if-larger-than-buffer works on
 	non-full-width windows.
@@ -1102,9 +1102,9 @@
 	* commands.texi (Misc Events): Add cross-references to where
 	POSITION of a mouse event is described in detail.
 
-2010-08-08  Christoph  <cschol2112@googlemail.com>
+2010-08-08  Christoph Scholtes  <cschol2112@googlemail.com>
 
-	* control.texi (Handling Errors) <error-message-string>: Fix arg name.
+	* control.texi (Handling Errors)  <error-message-string>: Fix arg name.
 
 2010-08-08  Juanma Barranquero  <lekktu@gmail.com>
 
